fix: logo overlaps hamburger icon

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -50,6 +50,18 @@
 }
 
 
+@media (min-width: 481px) and (max-width: 1100px) {
+  .header {
+    padding: 10px var(--padding-x) 10px 70px; /* 1) */
+  }
+
+  .headerWrapper {
+    margin-left: 0; /* 1) */
+  }
+
+  /* 1: offset the absolute positioned hamburger icon */
+}
+
 .logo {
   display: block;
   height: 80%;
